[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewmind"
version = "0.1.0"
description = "Local code scanner and CLI for ReviewMind - enforce code review rules before commits"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ReviewMind", email = "hello@reviewmind.ai" }
]
keywords = ["code-review", "static-analysis", "pre-commit", "linting", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
reviewmind = "reviewmind.cli.main:app"

[project.urls]
Homepage = "https://reviewmind.ai"
Repository = "https://github.com/reviewmind/reviewmind-cli"
Documentation = "https://docs.reviewmind.ai"
"Bug Tracker" = "https://github.com/reviewmind/reviewmind-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reviewmind*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=reviewmind --cov-report=term-missing"

